objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Event_Contact__c</fullName>
        <label>Event Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Alex Rein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthur de Cordova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beberly Velasquez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Kelly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobby Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Redlinger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bradley Dakake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brad Souza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruce Dickinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline Mead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad Tady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Baker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Giaras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Khatib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Crouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daryl Franks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Froelich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Larson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dennis Bora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derek Noble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dick Lowry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drew Gibbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Smeloff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emily Humphreys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fnan Araia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geoff Wilcox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Werner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Brown</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Close_of_Escrow__c</fullName>
        <label>Expected Close of Escrow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Address_2__c</fullName>
        <label>Facility Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Address__c</fullName>
        <label>Facility Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_City__c</fullName>
        <label>Facility City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_State__c</fullName>
        <label>Facility State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Zip__c</fullName>
        <label>Facility Zip</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifth_follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Eloqua Postcard 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Contact_Made__c</fullName>
        <label>First Contact Made</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focused_on_Ground_Mounted_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focused on Ground Mounted Systems?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Submission_Time_Original__c</fullName>
        <label>Form Submission Time - Original</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Eloqua Postcard 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friend_Id__c</fullName>
        <label>Friend Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-Party Consultant</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>“GCLID” is short for “Google click ID,” the ID that indicates that a customer came from one of your AdWords ads.</description>
        <inlineHelpText>“GCLID” is short for “Google click ID,” the ID that indicates that a customer came from one of your AdWords ads.</inlineHelpText>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Coverage__c</fullName>
        <inlineHelpText>Specific to EU Partner Leads</inlineHelpText>
        <label>Geographical Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Click_ID__c</fullName>
        <label>Google Click ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_Roof_Space__c</fullName>
        <description>Identify Ground / Roof Space available in Sqm</description>
        <label>Ground or Roof Space</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Business_Unit__c</fullName>
        <label>HD_Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>UPP Intl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HD_Competing_Partner_Indicator__c</fullName>
        <description>Hidden field to store result value (1, 2, or 3) of query for competing partner owned records, used to determining display value case of Competing Partner Status field</description>
        <label>HD_Competing Partner Indicator</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HD_Lead_Status__c</fullName>
        <label>HD_Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted– Awaiting Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Engineering_and_Sales_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Engineering and Sales Resources?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Rooftop_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rooftop Exp. OR Considering In Future?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_Unshaded_South_Facing_Roof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Unshaded South Facing Roof?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homes_Built_per_year__c</fullName>
        <label>Homes Built per year</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 - 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 2000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HooversId__c</fullName>
        <label>HooversId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend/Relative/Colleague/Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketer/Door to Door/Canvasser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News / Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company/Partner Alliance Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web (Search: Google or Yahoo; Email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event/Promotion at workplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event / Seminar / Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail (Email, Postcard or Door Hanger)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth/Table at business/event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion through another company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising (Billboard, Newspaper, Radio, TV, Airport, Banner Ads)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising (Billboard, Airport, Banner Ads &amp; Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News / Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPack/ BigYellowBox on St.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion through another company/organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_buy_your_Modules__c</fullName>
        <label>How do you buy your Modules?</label>
        <picklist>
            <controllingField>Total_Experience_in_Solar_Business__c</controllingField>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_heard_about_Sun_Power__c</fullName>
        <label>How heard about Sun Power?</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising (Billboard, Airport, Banner Ads &amp; Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail (Email, Postcard or Door Hanger)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event / Seminar / Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News / Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPack/ BigYellowBox on St.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web (Search: Google or Yahoo; Email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner/Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_owned_your_home__c</fullName>
        <label>How long have you owned your home?</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;5 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;5 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;15yrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Immediate_Interest_in_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Interest in Pricing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InboundMail_Date__c</fullName>
        <label>InboundMail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incentive_Rebate_Reservation__c</fullName>
        <label>Incentive / Rebate Reservation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Initiated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute used by Systems to Identify if the necessary infrastructure is already planned by the customer</description>
        <label>Infrastructure Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential Solar Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Solar Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner/ Distributorship Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Power Plant Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <picklist>
            <controllingField>Theater__c</controllingField>
            <picklistValues>
                <fullName>Flat Roof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carport.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground-Fixed.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground-Tracking.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slope Roof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Roof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Roof -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carport -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground-Fixed -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground-Tracking -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slope Roof -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Roof -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_date__c</fullName>
        <description>Installation date - Xantres Recall</description>
        <label>Installation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installations_Realized_Previous_Year__c</fullName>
        <label>Installations Realized Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <description>Installer Name - Xantrex Recall</description>
        <label>Installer Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <description>This field is updated by API or WebLead forms that are involved with Lead Creation.</description>
        <label>Integration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Agreement_Exists__c</fullName>
        <label>Interconnection Agreement Exists?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Part_Number__c</fullName>
        <label>Inverter_Part_Number</label>
        <picklist>
            <picklistValues>
                <fullName>864-0131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-0132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-0133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-0135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-1012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-1013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-1014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>864-1015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-0131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-0132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-0133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-0135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-1012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-1013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-1014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-864-1015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_SN_2__c</fullName>
        <label>Inverter SN-2</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_SN_3__c</fullName>
        <label>Inverter SN-3</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_SN__c</fullName>
        <description>Inverter SN - Xantrex Recall</description>
        <label>Inverter SN-1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invertors_Used__c</fullName>
        <label>Inverters Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAutoConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutoConvert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRuleRunForWebUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To ensure that no recursion occur to run assignment rule when web user create a Lead.</description>
        <label>IsRuleRunForWebUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_An_Investment_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Solar Advisors qualifies this during leads qualification process</description>
        <label>Is This An Investment Property?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kwh_month__c</fullName>
        <description>To be used by Solar Advisors to track Kwh/Month</description>
        <label>Kwh/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Type__c</fullName>
        <label>Land Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dismissed Agricultural Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Industrial Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polluted Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Large_Systems_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Systems Experience?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Name__c</fullName>
        <description>The Last Campaign Name the lead was associated to. Data is pulled from Eloqua.</description>
        <label>Most Recent Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Submission_Date__c</fullName>
        <label>Last Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Lat</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>This Fields hold Latitude Value of Lead Address if it is not null</description>
        <label>Latitude</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadScore__c</fullName>
        <description>Computed based on values provided</description>
        <label>Eloqua Lead Score Explicit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Approval__c</fullName>
        <label>Lead Approval</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Archive_reason__c</fullName>
        <label>Lead Archive reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Asked to be Contacted Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already an Existing Contact/Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No SPWR product/service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process - Holding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Lead / Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer - Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer - Not Home Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer - Out of Service Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer - Roof to small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Lost - No Return Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Lost - Bad Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Lost - Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Lost - Unresponsive Dealer (AP/EU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to other Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM Analyzing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Customer - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the right Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility-scale property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send to Marketing for Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info only request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than One Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Follow-Up – Partner Recruitment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Status__c</fullName>
        <label>Lead Conversion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed Conversion - Address not Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>